--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,18 @@
 - name: RedstoneTim's website
   link: /
+  dir: /website/
+- name: Blog
+  link: /blog.html
+  dir: 
 - name: Programming
   link: /programming.html
+  dir: /programming/
 - name: Cubing
   link: /cubing.html
+  dir: /cubing/
 - name: Accounts
   link: /accounts.html
+  dir: /accounts/
 - name: About
   link: /about.html
+  dir: /about/
