Removed unnecessary front matter and added better styling

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,20 @@ collections:
   posts:
     output: true
     permalink: /:collection/:name
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
+      author: "RedstoneTim"
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      
+plugins:
+  - jekyll-optional-front-matter
