Added LEOR page
Removed the blog and its post(s)
Added a new source to the ZZ stories

--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,8 @@ defaults:
     values:
       layout: "default"
       author: "RedstoneTim"
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
       
 plugins:
   - jekyll-optional-front-matter
+
+markdown: kramdown
